<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Config"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dollarRate" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/dollarRate"
            android:ems="10"
            android:hint="@string/dollarRate"
            android:inputType="number|textPersonName"
            android:onClick="save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:text="@string/euroRate"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/euroRate"
            android:ems="10"
            android:hint="@string/euroRate"
            android:inputType="number|textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:text="@string/wonRate"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/wonRate"
            android:ems="10"
            android:hint="@string/wonRate"
            android:inputType="number|textPersonName" />
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:onClick="save"/>

</LinearLayout>